--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,25 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  adapter: postgresql
+  encoding: unicode
+  database: <%= ENV.fetch('POSTGRES_DB', 'chatapp') %>
+  username: <%= ENV.fetch('POSTGRES_USER', 'chatapp') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD','secret') %>
+  host: <%= ENV.fetch('POSTGRES_HOST', 'localhost') %>
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
   timeout: 5000
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: <%= ENV.fetch('POSTGRES_DB', 'chatapp') %>
+  username: <%= ENV.fetch('POSTGRES_USER', 'chatapp') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD','secret') %>
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: <%= ENV.fetch('POSTGRES_DB', 'chatapp') + '_test'  %>
 
 production:
   <<: *default
-  database: db/production.sqlite3
