--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.2.2",
+    "axios-on-rails": "^0.0.1",
     "jquery": "^3.4.1",
     "rails-ujs": "^5.2.4-1",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.8.3",
+    "vue-template-compiler": "^2.6.11",
+    "vue-turbolinks": "^2.0.4"
   },
   "version": "0.1.0",
   "devDependencies": {
