--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "turbolinks": "^5.2.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.8.3",
+    "vue-moment": "^4.1.0",
     "vue-template-compiler": "^2.6.11",
     "vue-turbolinks": "^2.0.4"
   },
